# HW1

./: pyproject.toml
.github/workflows/: ci.yml
tests/: Untitled.ipynb  test_parsers.py  test_transcribe.py
